--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "sass": "^1.84.0",
+    "sockjs-client": "^1.6.1",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
   },
