--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_URL=https://localhost:8443/api/v1
+REACT_APP_BASE_URL=http://localhost:3000
 # REACT_APP_URL_PROD= "https://schweizer-gratis-inserate.ch/hive/"
