--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "sass": "^1.84.0",
     "sockjs-client": "^1.6.1",
     "web-vitals": "^4.2.4",
