--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_URL=https://localhost:8443/api/v1
+REACT_APP_URL=https://localhost:8443
 REACT_APP_WSURL=https://localhost:8443/ws
 REACT_APP_BASE_URL=http://localhost:3000
